# plys2sens

./: .gitignore  CMakeLists.txt  binply2dmp.sh  conver2dmp.sh  copy_python.sh  dmp.sh  makefile  mv_dmp.bash  reader.bash  rs  run.sh  sens.sh
python_bk/: calibration.py  cp_tof_model.sh  dataset.py  final.sh  gt.sh  joint_calibration.py  plot.py  plot_0.py  qqeval.sh  read_dmp.py  read_pgm.py  read_ply.py  read_pre_depth.py  readrs.py  rec.sh  run_train.sh  save_model.sh  start.py  test.sh  test_all.sh  test_final.sh  teval.sh  train.sh  write_record.py  write_record_gt.py  write_record_gt_gather.py  write_record_gt_pgm.py  write_record_merge.py  write_record_test.py  write_test.py
python_bk/model_FINAL_PLUS_10E/: checkpoint  model.ckpt-215000.index
python_bk/model_script/: clear_model.sh  cp_tof_model.sh  read_model.sh
python_bk/yee/: rec.sh
src/: binply2dmp.cpp  binply2dmpRS.cpp  binply2dmp_bk.cpp  binply2dmp_bk_0526.cpp  binply2dmp_bk_0610.cpp  conver2dmp.cpp  main.cpp  main_MP.cpp  main_origin.cpp  main_output_sens.cpp  openmp_test.cpp  out_sens.cpp  readrs.cpp  sens_MP.cpp  sensorData.h  sensorData_origin.h  sensorData_output_sens.h  write_dmp.cpp
